# project_nightlight

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
examples/: ceiling_flames.nl  dark_tunnel.nl  falling_balls.nl  iridescent_motion.nl  light_galaxy.nl.json  light_galaxy_pretty.nl  silky_blue.nl  smoke_sheet.nl  test_pattern.nl  wormhole.nl
nightlight/: base.py  cli.py  converter.py  player.py  writer.py
nightlight/pattern_generators/: perlin.py  simple.py
nightlight/subcommands/: converter.py  writer.py
project_nightlight/: converter.py  gif_converter.py
